fix wrong fonts for KADERBLICK brand

--- a/frontend/src/styles/public-home.css
+++ b/frontend/src/styles/public-home.css
@@ -108,12 +108,12 @@
 }
 
 .public-home-logo-k {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif !important;
+  font-family: 'ImpactWeb', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif !important;
   color: #34b74a;
 }
 
 .public-home-logo-aderblick {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif !important;
+  font-family: 'ImpactWeb', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif !important;
   color: #ffffff;
 }
 
